kubernetes/introspect-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: introspect
  labels:
    app: introspect
spec:
  containers:
  - image: vasu1124/introspect:v1.0
#    imagePullPolicy: IfNotPresent
    imagePullPolicy: Always
    name: introspect
    resources:
      requests:
        cpu: 500m
      limits:
        cpu: 1000m
    livenessProbe:
   # an http probe
      httpGet:
        path: /healthz
        port: 8080
      initialDelaySeconds: 15
      periodSeconds: 20
      timeoutSeconds: 1
      failureThreshold: 3
    readinessProbe:
  # an http probe
      httpGet:
        path: /healthzr
        port: 8080
      initialDelaySeconds: 20
      periodSeconds: 20
      timeoutSeconds: 1
      failureThreshold: 2
