kubernetes/testworkload.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    validation: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-https-echo
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-https-echo
  template:
    metadata:
      labels:
        app: http-https-echo
    spec:
      containers:
      - image: mendhak/http-https-echo
        imagePullPolicy: IfNotPresent
        name: http-https-echo
        ports:
        - containerPort: 80
