kubernetes/introspect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: introspect
  labels:
    app: introspect
    visualize: "true"
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: introspect
  type: ClusterIP
