kubernetes/introspect-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: introspect
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
  labels:
    uses: introspect
spec:
  tls:
  - hosts:
    - introspect.ingress.vasu1124.k8s.example.com
    secretName: introspect-tls
  rules:
  - host: introspect.ingress.vasu1124.k8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: introspect
          servicePort: 80
